--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4711,7 +4711,22 @@ a.gif_pop_opener img {
     text-align: center;
     align-items: center;
 }
-
+.gif_popup {
+    display: none;
+}
+.gif_popup {
+    position: absolute;
+    bottom: 0px;
+    right: 0;
+    height: 300px;
+    background: #dddddd87;
+    border-radius: 10px;
+    border: 1px solid;
+    width: 40%;
+}
+.chatblock img {
+    width: 150px;
+}
 #gif-container {
     display: flex;
     flex-wrap: wrap;
