Gif integration in User Chat

--- a/views/pages/front/admin-chat.ejs
+++ b/views/pages/front/admin-chat.ejs
@@ -64,7 +64,7 @@
                                                 <!--  -->
                                                 <div class="gif_popup">
                                                     <div class="gif_search_con">
-                                                        <input type="text" class="gif_search_keyup" id="gif_search_keyup" placeholder="Search for a GIF...">
+                                                        <input type="text" class="gif_search_keyup" data-usertype="admin" id="gif_search_keyup" placeholder="Search for a GIF...">
                                                     </div>
                                                     <div id="gif-container"></div>                                                    
                                                 </div>
