Working on Typing Functionality

--- a/views/pages/front/admin-chat.ejs
+++ b/views/pages/front/admin-chat.ejs
@@ -59,6 +59,7 @@
                                 <div class="msgsend-form">
                                     <form id="admin-chat-form">
                                         <div class="input-group">
+                                            <div id="typing-indicator"></div>
                                             <input type="text" class="form-control" id="send-message" placeholder="Type your Message....">
                                             <div class="input-group-prepend">
                                                 <!--  -->
