--- a/views/pages/front/user-chat.ejs
+++ b/views/pages/front/user-chat.ejs
@@ -55,6 +55,7 @@
                                 <div class="msgsend-form">
                                     <form id="user-chat-form">
                                         <div class="input-group">
+                                            <div id="typing-indicator<%=  %>"></div>                                            
                                             <input type="text" class="form-control" id="send-message" placeholder="Type your Message....">
                                             <div class="input-group-prepend">
                                                 <div class="gif_popup">
