--- a/views/layouts/front-layout.ejs
+++ b/views/layouts/front-layout.ejs
@@ -32,6 +32,7 @@
       <script type="text/javascript" src="/socket.io/socket.io.min.js"></script>
       <script type="module" src="https://cdn.jsdelivr.net/npm/emoji-picker-element@1.22.8/+esm"></script>
       <script type="text/javascript" src="/js/chat.js"></script>      
+      <script type="text/javascript" src="/js/ajax-req.js"></script>
    </body>
 
 </html>
