Chat User register via ajax response

--- a/views/pages/front/signup.ejs
+++ b/views/pages/front/signup.ejs
@@ -28,8 +28,9 @@
                 <label for="emp_profile_pic">Profile Pic</label>
                 <input type="file" class="form-control" name="emp_profile_pic" id="emp_profile_pic" placeholder="Upload Profile Pic">
             </div>
-
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="form-group">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
         </form>
         <a href="/login">Login</a>
     </body>
